--- a/backend/.env
+++ b/backend/.env
@@ -2,10 +2,10 @@
 NODE_ENV=development
 PORT=3001 # Hoặc port bạn đang dùng
 JWT_SECRET=yourVerySecureAndRandomJwtSecretKeyHere # THAY BẰNG KEY BÍ MẬT CỦA BẠN
-DB_NAME=anime_blog_db
-DB_USER=root
-DB_PASSWORD=leminhtuan123
-DB_HOST=localhost
+DB_HOST=bjrvzbqhf9cg2uyq6cdu-mysql.services.clever-cloud.com
+DB_USER=u0nexnztel6cf5yy
+DB_PASSWORD=dJojvpAQzX4H9ShxjsYM
+DB_NAME=bjrvzbqhf9cg2uyq6cdu
 DB_DIALECT=mysql
 EMAIL_USER=let36606@gmail.com  # Hoặc tài khoản Gmail bạn đã dùng để tạo mật khẩu ứng dụng này
 EMAIL_PASS=inbfkhpjxwqiszdm
